# tinycc

./: .gitignore  CMakeLists.txt  LICENSE
src/: CMakeLists.txt  lexer.l  parser.h  parser.y
